--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
@@ -28,12 +29,38 @@
             android:textStyle="bold" />
 
 
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="show password"
+                android:id="@+id/show1"
+                android:layout_marginStart="93dp"
+                android:layout_marginLeft="293dp"
+                android:layout_marginTop="346dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="-100dp"
+                >
+
+            </CheckBox>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show password"
+        android:id="@+id/show2"
+        android:layout_marginStart="93dp"
+        android:layout_marginLeft="293dp"
+        android:layout_marginTop="420dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="-100dp"
+        >
+
+    </CheckBox>
 
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="230dp"
-        android:src="@drawable/l"/>
+        android:src="@drawable/l" />
 
     <EditText
         android:id="@+id/email"
@@ -63,7 +90,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="93dp"
         android:layout_marginLeft="93dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="34dp"
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
@@ -77,7 +104,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="110dp"
         android:layout_marginRight="110dp"
         android:layout_marginBottom="179dp"
@@ -94,15 +121,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="210dp"
         android:layout_marginLeft="216dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="110dp"
         android:layout_marginBottom="179dp"
-
-
-
-
-
         android:backgroundTint="#8BC34A"
         android:text="Login"
         android:background="@drawable/b1"
